--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,8 +1,8 @@
-@media screen and (min-width: 24em) {
+@media screen and (min-width: 20em) {
     header {
         height: 6.0rem;
     }
-    
+
     main h1 {
         margin-top: 4.0rem;
         line-height: 4.0rem;
@@ -18,7 +18,16 @@
     }
 }
 
+@media screen and (min-width: 22em) {
+    .container-box {
+        height: 70.0rem;
+    }
+}
+
 @media screen and (min-width: 40em) {
+    .container-box {
+        height: 85.0rem;
+    }
 
     header {
         height: 7.0rem;
@@ -52,5 +61,12 @@
     main .convert-button button {
         width: 45.0rem;
         height: 5.0rem;
+    }
+}
+
+@media screen and (min-width: 70em) {
+    .container-box {
+        margin: auto;
+        width: 106.0rem;
     }
 }
